image resizing trial css

--- a/styles.css
+++ b/styles.css
@@ -5,4 +5,13 @@ body {
 
 h1 {
     color: pink 
+
+    
+    
+#my image {
+    height: auto;
+    width: auto;
+    max-width; 100px;
+    max height: 100px;
 }
+   
