--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,31 @@ body {
 header {
     color: #e813a8;
     font-family:'Roboto Mono', monospace;
+    padding: 30px 30px 0px 30px;
 }
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row; 
+}
+
+.symbol-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+}
+
+.symbol {
+    height: 30px;
+    padding: 10px;
+}
+.logo {
+    height: 50px;
+}
+
 
 
 .container {
@@ -39,10 +63,11 @@ h1 {
 }
 
 .container2 {
-    display: grid; 
-    grid-template-columns: 2fr 1fr; 
-    gap: 0px 0px; 
-    margin: 75px 75px 0 75px;
+        display: grid; 
+        grid-template-columns: 1fr 3fr; 
+        gap: 0px 0px; 
+        padding: 30px 30px 100px 30px;
+    
   }
 
 p {
