--- a/styles.css
+++ b/styles.css
@@ -19,18 +19,15 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    
 }
 
 .symbol {
-    height: 30px;
-    padding: 10px;
+    height: 40px;
+    padding: 10px 20px 10px 10px;
 }
 .logo {
     height: 50px;
 }
-
-
 
 .container {
     display: grid; 
@@ -67,7 +64,6 @@ h1 {
         grid-template-columns: 1fr 3fr; 
         gap: 0px 0px; 
         padding: 30px 30px 100px 30px;
-    
   }
 
 p {
@@ -76,38 +72,84 @@ p {
     font-family: 'Open Sans', sans-serif;
 }
     
-#forest-image {
-    height: 200px;
-    width: 100px;
-}
 #coffee-image {
     height: 200px;
     width: 200px;
     border-radius: 50%;
+    float:right;
+
 }
 h3 {
     color: #e813a8;
     font-family: 'Roboto Mono', monospace;
 }
-#grid-area {
+.cvgrid {
     background-color: #aabbbf;
     color: #001a21;
     display: flex;
-    margin: 30px 30px 30px 30px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    justify-content:space-around;
+    padding:10px 10px 10px 10px;
+    margin: 40px 40px 40px 40px;
     width: 100%
-    
+    text-align fit-content;
 }
+
 li {
 color: #001a21;
 font-family: 'Open Sans', sans-serif;
 }
+
 .second-title { 
     color: #aabbbf;
     font-family: 'Roboto Mono', monospace;
     text-align:left;
     position:relative;
     margin: 0px 75px 0 75px;
+    padding:0px 0 20px 0;
+
 }
+.text1 {
+    color: #aabbbf;
+    font-family: 'Roboto Mono', monospace;
+    margin: 0px 75px 0 75px;
+    font-size: small;
+
+}
+
+.container3 {
+    display: grid; 
+    grid-template-columns: 1fr 3fr; 
+    gap: 0px 0px; 
+    padding: 30px 30px 100px 30px;
+}
+/*.cvgrid {
+    display: grid;
+    grid-template-columns: 0.5fr 1.4fr 1.4fr 1.4fr 0.5fr;
+    grid-template-rows: 0.4fr 1fr 1fr 1fr 1.6fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+  }
+  
+  .second-title {
+  
+    justify-self: center;
+    align-self: center;
+    grid-area: 1 / 2 / 2 / 5;
+  }
+  
+  .development { grid-area: 2 / 3 / 5 / 4; }
+  
+  .design { grid-area: 2 / 2 / 5 / 3; }
+  
+  .disposition { grid-area: 2 / 4 / 5 / 5; }
+  
+  .lt-grey-box { 
+      grid-area: 4 / 1 / 6 / 6; 
+      background-color: #aabbbf;}
+  
+  
+  html, body , .cvgrid {
+    height: 100%;
+    margin: 0;
+  }*/
